added another question to the form

--- a/form.css
+++ b/form.css
@@ -5,7 +5,7 @@ fieldset {
 legend {
 text-align: center;
 }
-input, select {
+input[type='text'], input[type='email'], select {
 width: 100%;
 padding: 12px;
 border: 1px solid #ccc;
@@ -32,4 +32,9 @@ padding: 20px;
 }
 p {
     color: blue;
+}
+.add_on_option {
+    font-size: small;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
