--- a/form.css
+++ b/form.css
@@ -5,7 +5,7 @@ fieldset {
 legend {
 text-align: center;
 }
-input[type='text'], input[type='email'], input[type='number'], select {
+input[type='text'], input[type='email'], input[type='number'], input[type='text'], select {
 width: 100%;
 padding: 12px;
 border: 1px solid #ccc;
