--- a/form.css
+++ b/form.css
@@ -14,6 +14,8 @@ box-sizing: border-box;
 margin-top: 6px;
 margin-bottom: 16px;
 }
+input[type='text'] {height: 10em;}
+
 button {
 background-color: #4CAF50;
 color: white;
