--- a/form.css
+++ b/form.css
@@ -5,7 +5,7 @@ fieldset {
 legend {
 text-align: center;
 }
-input[type='text'], input[type='email'], input[type='number'], input[type='text'], select {
+input[type='text'], input[type='email'], input[type='number'], select {
 width: 100%;
 padding: 12px;
 border: 1px solid #ccc;
@@ -14,7 +14,7 @@ box-sizing: border-box;
 margin-top: 6px;
 margin-bottom: 16px;
 }
-input[type='text'] {height: 10em;}
+#add-on_spec {height: 10em;}
 
 button {
 background-color: #4CAF50;
