--- a/form.css
+++ b/form.css
@@ -5,7 +5,7 @@ fieldset {
 legend {
 text-align: center;
 }
-input[type='text'], input[type='email'], input[type='number'], select {
+input[type='text'], input[type='email'], input[type='number'], textarea, select {
 width: 100%;
 padding: 12px;
 border: 1px solid #ccc;
@@ -14,6 +14,8 @@ box-sizing: border-box;
 margin-top: 6px;
 margin-bottom: 16px;
 }
+
+
 
 button {
 background-color: #4CAF50;
